tests/cli_renderer_unicode/cli_renderer_unicode.exp
Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ basic.js:6:2

Error: basic.js:6
  6: (null: empty); // Error: null ~> empty
      ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
    6: (null: empty); // Error: null ~> empty
        ^^^^ [1]: null
    6: (null: empty); // Error: null ~> empty
              ^^^^^ [2]: empty


Found 1 error
